website/versioned_docs/version-2.11.x/reference/targets/python_distribution.mdx
---
title: python_distribution
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

A publishable Python setuptools distribution (e.g. an sdist or wheel).

See https://www.pantsbuild.org/v2.11/docs/python-distributions.

Backend: <span className="color--primary">`pants.backend.python`</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list --documented ::` to see all targets with descriptions.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;, &#x27;helloworld/main.py:lib&#x27;, &#x27;3rdparty:reqs#django&#x27;].

This augments any dependencies inferred by Pants, such as by analyzing your imports. Use `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies` or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 peek` on this target to get the final result.

See https://www.pantsbuild.org/v2.11/docs/targets#target-addresses and https://www.pantsbuild.org/v2.11/docs/targets#target-generation for more about how addresses are formed, including for generated targets. You can also run `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list ::` to find all addresses in your project, or `/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 list dir:` to find all addresses defined in that directory.

If the target is in the same BUILD file, you can leave off the BUILD file path, e.g. `:tgt` instead of `helloworld/subdir:tgt`. For generated first-party addresses, use `./` for the file path, e.g. `./main.py:tgt`; for all other generated targets, use `:tgt#generated_name`.

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `entry_points`

<Field
    type_repr={`field.type_hint`}
>

Any entry points, such as `console_scripts` and `gui_scripts`.

Specify as a nested dictionary, with a dictionary for each type of entry point, e.g. `console_scripts` vs. `gui_scripts`. Each dictionary maps the entry point name to either a setuptools entry point (&quot;path.to.module:func&quot;) or a Pants target address to a pex_binary target.

Example:
```
entry_points={
  "console_scripts": {
    "my-script": "project.app:main",
    "another-script": "project/subdir:pex_binary_tgt"
  }
}
```

Note that Pants will assume that any value that either starts with `:` or has `/` in it, is a target address to a pex_binary target. Otherwise, it will assume it's a setuptools entry point as defined by https://packaging.python.org/specifications/entry-points/#entry-points-specification. Use `//` as a prefix for target addresses if you need to disambiguate.

Pants will attempt to infer dependencies, which you can confirm by running:
```
/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 dependencies <python_distribution target address>
```

</Field>

## `provides`

<Field
    type_repr={`field.type_hint`}
>

The setup.py kwargs for the external artifact built from this target.

You must define `name`. You can also set almost any keyword argument accepted by setup.py in the `setup()` function: (https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args).

See https://www.pantsbuild.org/v2.11/docs/plugins-setup-py for how to write a plugin to dynamically generate kwargs.

</Field>

## `generate_setup`

<Field
    type_repr={`field.type_hint`}
>

Whether to generate setup information for this distribution, based on analyzing sources and dependencies. Set to False to use existing setup information, such as existing setup.py, setup.cfg, pyproject.toml files or similar.

</Field>

## `wheel`

<Field
    type_repr={`field.type_hint`}
    default_repr={`True`}
>

Whether to build a wheel for the distribution.

</Field>

## `sdist`

<Field
    type_repr={`field.type_hint`}
    default_repr={`True`}
>

Whether to build an sdist for the distribution.

</Field>

## `wheel_config_settings`

<Field
    type_repr={`field.type_hint`}
>

PEP-517 config settings to pass to the build backend when building a wheel.

</Field>

## `sdist_config_settings`

<Field
    type_repr={`field.type_hint`}
>

PEP-517 config settings to pass to the build backend when building an sdist.

</Field>

## `long_description_path`

<Field
    type_repr={`field.type_hint`}
>

Path to a file that will be used to fill the long_description field in setup.py.

Path is relative to the build root.

Alternatively, you can set the `long_description` in the `provides` field, but not both.

This field won&#x27;t automatically set `long_description_content_type` field for you. You have to specify this field yourself in the `provides` field.

</Field>

## `repositories`

<Field
    type_repr={`field.type_hint`}
    backend="pants.backend.experimental.python"
>

List of URL addresses or Twine repository aliases where to publish the Python package.

Twine is used for publishing Python packages, so the address to any kind of repository that Twine supports may be used here.

Aliases are prefixed with `@` to refer to a config section in your Twine configuration, such as a `.pypirc` file. Use `@pypi` to upload to the public PyPi repository, which is the default when using Twine directly.

</Field>

## `skip_twine`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
    backend="pants.backend.experimental.python"
>

If true, don&#x27;t publish this target&#x27;s packages using Twine.

</Field>



</span>